# gmocpp

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  copy_api.cmd  cp_dll.cmd  env.cmd  gamsconfig.yaml  gmocpp.cpp  readme.txt
